syntax="proto3";

option go_package="usecase/user";

package user;

message GreetingRequest{
    string name = 1;
    string payload = 2;
}

message GreetingResponse{
    string greetingMessage = 1;
}


service UserService{
    rpc GreetUser(GreetingRequest) returns (GreetingResponse);
    rpc GreetUserLain(GreetingRequest) returns (GreetingResponse);
}